# Turtlebot_gestes

./: .gitignore  README.md
Turtlebot3_gestes/projects/turtlebot3_descriptions/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
Turtlebot3_gestes/projects/turtlebot3_descriptions/launch/: turtlebot3_d435i.launch.py
Turtlebot3_gestes/projects/turtlebot3_descriptions/meshes/actuators/bucket/: bucket.stl  support_bucket.stl
Turtlebot3_gestes/projects/turtlebot3_descriptions/meshes/actuators/gripper/: gripper_base.stl  gripper_left.stl  gripper_tilt.stl
Turtlebot3_gestes/projects/turtlebot3_descriptions/meshes/sensors/: intel_d435i.dae  picam.stl  support_cameras_part_a.stl  support_cameras_part_b.stl
Turtlebot3_gestes/projects/turtlebot3_descriptions/rviz/: model.rviz
Turtlebot3_gestes/projects/turtlebot3_descriptions/urdf/: turtlebot3_burger_d435i.urdf
Turtlebot3_gestes/turtlebot3_gazebo/: CMakeLists.txt  README.md
coral/: README.md  coral_server.py  coral_server_tflite.py  install_and_run.sh
ia_turtlebot_vision/: package.xml  setup.cfg  setup.py
ia_turtlebot_vision/ia_turtlebot_vision/: gesture_detector_node.py  person_detector_node.py  webcam_publisher_node.py
ia_turtlebot_ws/: README.md
robot_supervisor/: package.xml  setup.cfg  setup.py
robot_supervisor/launch/: robot_launch.py
robot_supervisor/robot_supervisor/: supervisor.py
scripts/: launch_gesture_controller.sh  launch_robot.sh
turtlebot3_autonomous/: package.xml  setup.cfg  setup.py
turtlebot3_autonomous/turtlebot3_autonomous/: obstacle_avoider.py
(+34 files in other folders)
