<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_descriptions</name>
  <version>2.3.3</version>
  <description>
    3D models of the TurtleBot3 for simulation and visualization
  </description>
  <maintainer email="gerald.rocher@univ-cotedazur.fr">grocher</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <author email="gerald.rocher@univ-cotedazur.fr">Gerald Rocher</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
